# cortesh

./: .gitignore  LICENSE  README.md  pyproject.toml
.cortesh/: config.toml  index.db
.cortesh/embeddings/: chroma.sqlite3
cortesh/: cli.py  config.py
cortesh/.cortesh/embeddings/: chroma.sqlite3
cortesh/brain/output/: command.py  create_file.py  message.py
cortesh/brain/sense/: command_response.py  file_content.py
cortesh/interface/: __init__.py  llm.py  logger.py
cortesh/learn/: __init__.py  explore.py  indexer.py  learn.py  learn_parallel.py
cortesh/learn/reader/: git.py
cortesh/process/: __init__.py  process.py
cortesh/process/logic/: base.py  folder_project.py  knowledge.py
cortesh/process/memory/: memory.py
cortesh/process/output/: command.py  create_file.py  error.py  message.py  output.py
cortesh/process/sense/: command_response.py  file_content.py  folder_structure.py  sense.py
